db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/microservice-network: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: gateway_db
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: SERVICE_NAME
              value: mysql
            - name: SERVICE_TAGS
              value: dev
          image: mysql:8.0
          name: db
          ports:
            - containerPort: 3306
          resources: {}
          tty: true
          volumeMounts:
            - mountPath: /var/lib/mysql/
              name: dbdata
            - mountPath: /etc/mysql/my.cnf
              name: db-claim1
      restartPolicy: Always
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata
        - name: db-claim1
          persistentVolumeClaim:
            claimName: db-claim1
status: {}
