webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/microservice-network: "true"
        io.kompose.service: webserver
    spec:
      containers:
        - image: nginx:alpine
          name: webserver
          ports:
            - containerPort: 83
            - containerPort: 443
          resources: {}
          tty: true
          volumeMounts:
            - mountPath: /var/www/authorservice
              name: webserver-claim0
            - mountPath: /var/www/bookservice
              name: webserver-claim1
            - mountPath: /var/www/gatewayservice
              name: webserver-claim2
            - mountPath: /etc/nginx/nginx.conf
              name: webserver-claim3
            - mountPath: /etc/nginx/conf.d/
              name: webserver-claim4
            - mountPath: /etc/ssl/
              name: webserver-claim5
      restartPolicy: Always
      volumes:
        - name: webserver-claim0
          persistentVolumeClaim:
            claimName: webserver-claim0
        - name: webserver-claim1
          persistentVolumeClaim:
            claimName: webserver-claim1
        - name: webserver-claim2
          persistentVolumeClaim:
            claimName: webserver-claim2
        - name: webserver-claim3
          persistentVolumeClaim:
            claimName: webserver-claim3
        - name: webserver-claim4
          persistentVolumeClaim:
            claimName: webserver-claim4
        - name: webserver-claim5
          persistentVolumeClaim:
            claimName: webserver-claim5
status: {}
