webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  ports:
    - name: "83"
      port: 83
      targetPort: 83
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: webserver
status:
  loadBalancer: {}
